--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <img class="mainPhoto" src="card.jpg" alt="#" />
     <div class="relativeDiv">
-      <img class="mainPhoto" src="card.jpg" alt="#" />
+      <div class="numberKvitancia">
+        Квитанція № <span class="divKvitancia">2139-6915-5798-0609</span>
+      </div>
 
       <div class="lineIphone"></div>
       <div class="phone"></div>
@@ -60,8 +63,26 @@
       <div class="date textDescription">2025-11-09 19:12:27</div>
 
       <div class="verticalLine"></div>
+      <div class="signifitureBank">ПІДПИС БАНКУ</div>
+      <div class="head">Голова правління</div>
+      <div class="atAbank">АТ "А-БАНК"</div>
+      <div class="nameDirector">
+        Кандауров <span class="inicials">Ю. В.</span>
+      </div>
+      <img class="stamp" src="stamp.jpg" alt="#" />
+      <div class="describingHelp">
+        АКЦІОНЕРНЕ ТОВАРИСТВО "АКЦЕНТ-БАНК" <br />
+        вул. Батумська, 11. м. Дніпро, Україна <br />
+        Телефон 7776 <br />
+        www.a-bank.com.ua
+      </div>
+      <div class="backQr">
+        <img class="qrimg" src="QR.jpg" alt="#">
+        <div class="qrBonus">Отримайте картку <br> "Зелена" від А-Банку <br> <span class="andFifty">та 50 грн. кешбеку.</span></div>
+      </div>
+      <div class="button">Відправити</div>
     </div>
-    <img class="mainPhoto2" src="card.jpg" alt="#" />
+    <!-- <img class="mainPhoto2" src="card.jpg" alt="#" /> -->
     <div class="lineHorizont"></div>
   </body>
 </html>
