--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <!-- <div class="modal">
+      <form class="instructionForm" action="#">
+        <input placeholder="батарея" type="text" />
+        <input placeholder="время" type="text" />
+        <input placeholder="номер квитанции" type="text" />
+        <input placeholder="имя фамилия отчество" type="text" />
+        <input placeholder="счет платника" type="text" />
+        <input placeholder="сума операции" type="text">
+        <input placeholder="комиссия" type="text">
+        <input placeholder="карта получателя" type="text">
+        <input placeholder="дата и время проведения операции" type="text">
+        <button class="send" type="button">отправить</button>
+      </form>
+    </div> -->
+
+
+
+
+    
     <img class="mainPhoto" src="card.jpg" alt="#" />
     <div class="relativeDiv">
       <div class="numberKvitancia">
@@ -32,7 +51,6 @@
 
       <div class="nameSender textDescription">
         Матвєєв Кіріл Андрійович
-        <!-- <span class="fatherName">Андрійович</span> -->
       </div>
       <div class="backName"></div>
       <div class="simmilarOptions payer">Платник:</div>
@@ -77,12 +95,16 @@
         www.a-bank.com.ua
       </div>
       <div class="backQr">
-        <img class="qrimg" src="QR.jpg" alt="#">
-        <div class="qrBonus">Отримайте картку <br> "Зелена" від А-Банку <br> <span class="andFifty">та 50 грн. кешбеку.</span></div>
+        <img class="qrimg" src="QR.jpg" alt="#" />
+        <div class="qrBonus">
+          Отримайте картку <br />
+          "Зелена" від А-Банку <br />
+          <span class="andFifty">та 50 грн. кешбеку.</span>
+        </div>
       </div>
       <div class="button">Відправити</div>
     </div>
-    <!-- <img class="mainPhoto2" src="card.jpg" alt="#" /> -->
     <div class="lineHorizont"></div>
+    <script src="./main.js"></script>
   </body>
 </html>
