--- a/index.html
+++ b/index.html
@@ -34,24 +34,21 @@
       </form>
     </div> -->
 
-
-
-
-    
     <img class="mainPhoto" src="card.jpg" alt="#" />
     <div class="relativeDiv">
+      <div class="lineIphoneBottom"></div>
+      <div class="time">14 <span class="dots">:</span>31</div>
       <div class="numberKvitancia">
-        Квитанція № <span class="divKvitancia">2139-6915-5798-0609</span>
+        Квитанція № <span class="divKvitancia">2169-6945-5798-0209</span>
       </div>
+      <img class="percents" src="topmenu.jpg" alt="#">
 
       <div class="lineIphone"></div>
       <div class="phone"></div>
       <div class="whiteContent"></div>
       <img class="logoImg" src="logoNice.jpg" alt="#" />
 
-      <div class="nameSender textDescription">
-        Матвєєв Кіріл Андрійович
-      </div>
+      <div class="nameSender textDescription">Матвєєв Кіріл Андрійович</div>
       <div class="backName"></div>
       <div class="simmilarOptions payer">Платник:</div>
       <div class="backWhitePayer"></div>
@@ -68,17 +65,17 @@
         <span class="numbersAfterUA">083077700000026204719069444,****1104</span>
       </div>
       <div class="sumOperationText simmilarOptions">Сума операції:</div>
-      <div class="fullSum textDescription">245.00 UAH</div>
+      <div class="fullSum textDescription">3000.00 UAH</div>
       <div class="simmilarOptions commisions">Комісія:</div>
       <div class="backWhitecommisions"></div>
       <div class="comissionsText textDescription">0.00 UAH</div>
       <div class="simmilarOptions getter">Отримувач:</div>
-      <div class="getterText textDescription">4441111063741452</div>
+      <div class="getterText textDescription">4323345017992638</div>
       <div class="backWhiteGetter"></div>
       <div class="simmilarOptions dateAndTime">
         Дата і час проведення операції:
       </div>
-      <div class="date textDescription">2025-11-09 19:12:27</div>
+      <div class="date textDescription">2025-11-21 14:31:03</div>
 
       <div class="verticalLine"></div>
       <div class="signifitureBank">ПІДПИС БАНКУ</div>
